--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/Multiplayer_Course.Multiplayer_CourseGameMode"
+GameInstanceClass=/Script/Multiplayer_Course.MPGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
