Started working with Steam OSS

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/MenuSystem/MainMenuLevel.MainMenuLevel
+EditorStartupMap=/Game/MenuSystem/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode="/Script/Multiplayer_Course.Multiplayer_CourseGameMode"
 GameInstanceClass=/Script/Multiplayer_Course.MPGameInstance
 
@@ -26,3 +26,15 @@ r.RayTracing=True
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Multiplayer_CourseGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Multiplayer_CourseCharacter")
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
